Added thread.hpp and tried to add to_string()
It isn't going well. Probably should've just put all this stuff in cpp files rather than all of it being in hpp files.

The build isn't working at the moment.

--- a/Object Hierarchy/Object Hierarchy.vcxproj.filters
+++ b/Object Hierarchy/Object Hierarchy.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="stdio.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="thread.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
