--- a/Object Hierarchy/Object Hierarchy.vcxproj
+++ b/Object Hierarchy/Object Hierarchy.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="primitive.hpp" />
     <ClInclude Include="stdio.hpp" />
     <ClInclude Include="string.hpp" />
+    <ClInclude Include="thread.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
